--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
             <form class="form">
                 <h3 class="light-text">Welcome back, please login to your account</h3>
-
+                <small class="error-msg"></small>
                 <div class="form-control">
-                    <input type="email" class="form-input" placeholder="Email Address">
+                    <input type="text" class="form-input email error-msg" placeholder="Email Address">
                 </div>
                 <div class="form-control">
-                    <input type="password" class="form-input" placeholder="Password">
+                    <input type="password" class="form-input password" placeholder="Password">
                 </div>
                 <div class="form-control">
                     <input type="checkbox" id="remember-me">
@@ -35,8 +35,8 @@
                     <a href="" class="forget-password light-text"><span>Forgot Password?</span></a>
                 </div>
                 <div class="form-control buttons-div">
-                    <button class="button login">Login</button>
-                    <button class="button sign-up">Sign up</button>
+                    <a href=""><button class="button login" id="log-in">Login</button></a>
+                    <a href=""><button class="button sign-up" id="sign-up">Sign up</button></a>
                 </div>
             </form>
         </section>
@@ -47,8 +47,14 @@
                 <img src="./images/vectorimage.jpg" alt="iIdea-generation" class="image">
             </figure>
         </section>
+       
 
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- main script -->
+    <script src="script.js"></script>
 </body>
 
 </html>
