populated table with API

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h3 class="light-text">Welcome back, please login to your account</h3>
                 <small class="error-msg"></small>
                 <div class="form-control">
-                    <input type="text" class="form-input email error-msg" placeholder="Email Address">
+                    <input type="text" class="form-input email" placeholder="Email Address">
                 </div>
                 <div class="form-control">
                     <input type="password" class="form-input password" placeholder="Password">
