--- a/user_team_member/memberpage.html
+++ b/user_team_member/memberpage.html
@@ -11,8 +11,21 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-success">
-        <div class="container border border-danger">
+    <div class="container-fluid bg-success" id="main-content">
+    <div class="container">
+          <div class="row mb-3 border border-dark justify-content-center">
+              <div class="col-lg-10 btn-warning d-flex">
+                  <h5>Team Members</h5>
+                  <button class="btn btn-primary ml-auto">+ Invite a new user</button>
+              </div>
+          </div>
+        <table class="table table-borderd">
+            <tbody id="tdata">
+
+            </tbody>
+        </table>
+    </div>
+        <!-- <div class="container border border-danger">
             <div class="row mb-3 border border-dark justify-content-center">
                 <div class="col-lg-10 btn-warning d-flex">
                     <h5>Team Members</h5>
@@ -22,9 +35,28 @@
             <div class="row my-3 justify-content-center">
                 <div class="col-lg-10 bg-warning py-3 d-flex">
                     <div class="avatar col d-flex">
+                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle" alt="developer-img">
+                        <h5 class="col align-self-center name">Name</h5>
+                    </div>
+
+                    <h5 class="col align-self-center">Email</h5>
+                    <h5 class="col align-self-center">Developer</h5>
+                    <div class="button col align-self-center col-auto">
+                        <button class="btn btn-success">Activated</button>
+                    </div>
+                    <div class="icon col align-self-center d-flex justify-content-end">
+                        <img src="./images/icons8-settings-16.png" alt="settings">
+                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand">
+                        </div>
+                    </div>
+                </div> 
+            </div> -->
+        <!-- <div class="row my-3 justify-content-center">
+                <div class="col-lg-10 bg-warning py-3 d-flex">
+                    <div class="avatar col d-flex">
                         <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
                             alt="developer-img">
-                        <h5 class="col align-self-center">Name</h5>
+                        <h5 class="col align-self-center name">Name</h5>
                     </div>
 
                     <h5 class="col align-self-center">Email</h5>
@@ -43,7 +75,7 @@
                     <div class="avatar col d-flex">
                         <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
                             alt="developer-img">
-                        <h5 class="col align-self-center">Name</h5>
+                        <h5 class="col align-self-center name">Name</h5>
                     </div>
 
                     <h5 class="col align-self-center">Email</h5>
@@ -62,7 +94,7 @@
                     <div class="avatar col d-flex">
                         <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
                             alt="developer-img">
-                        <h5 class="col align-self-center">Name</h5>
+                        <h5 class="col align-self-center name">Name</h5>
                     </div>
 
                     <h5 class="col align-self-center">Email</h5>
@@ -81,7 +113,7 @@
                     <div class="avatar col d-flex">
                         <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
                             alt="developer-img">
-                        <h5 class="col align-self-center">Name</h5>
+                        <h5 class="col align-self-center name">Name</h5>
                     </div>
 
                     <h5 class="col align-self-center">Email</h5>
@@ -94,29 +126,29 @@
                         <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand" ></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-        </div>
+    </div>
 
     </div>
 
 
 
-<!-- bootstrap jquery CDN -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
-  </script>
-  <!-- jquery CDN -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <!-- main script -->
-    <script src="script.js"></script>
+    <!-- bootstrap jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+    </script>
+    <!-- jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- main script -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
