--- a/user_team_member/memberpage.html
+++ b/user_team_member/memberpage.html
@@ -11,20 +11,26 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-success" id="main-content">
-    <div class="container">
-          <div class="row mb-3 border border-dark justify-content-center">
-              <div class="col-lg-10 btn-warning d-flex">
-                  <h5>Team Members</h5>
-                  <button class="btn btn-primary ml-auto">+ Invite a new user</button>
-              </div>
-          </div>
-        <table class="table table-borderd">
-            <tbody id="tdata">
+    <div class="container-fluid" id="main-content">
+        <div class="container">
+            <div class="row mb-3 justify-content-center">
+                <div class="col-lg-10 d-flex">
+                    <h4 class="text-white">Team Members</h4>
+                    <button class="btn btn-primary bg-warning ml-auto">+ Invite a new user</button>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <table class="table table-borderless">
+                        <tbody id="tmembers">
 
-            </tbody>
-        </table>
-    </div>
+                        </tbody>
+                    </table>
+                    
+                </div>
+            </div>
+
+        </div>
         <!-- <div class="container border border-danger">
             <div class="row mb-3 border border-dark justify-content-center">
                 <div class="col-lg-10 btn-warning d-flex">
@@ -127,8 +133,6 @@
                     </div>
                 </div>
             </div> -->
-
-    </div>
 
     </div>
 
