--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
+     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -21,18 +22,18 @@
             </header>
 
             <form class="form">
-                <h3 class="light-text">Welcome back, please login to your account</h3>
+                <span class="light-text">Welcome back, please login to your account</span>
                 <small class="error-msg"></small>
                 <div class="form-control">
-                    <input type="text" class="form-input email" placeholder="Email Address">
+                    <input type="text" class="form-input email" placeholder="Email Address" autocomplete="on">
                 </div>
                 <div class="form-control">
                     <input type="password" class="form-input password" placeholder="Password">
                 </div>
                 <div class="form-control">
                     <input type="checkbox" id="remember-me">
-                    <label for="remember-me" class="light-text">Remember Me</label>
-                    <a href="" class="forget-password light-text"><span>Forgot Password?</span></a>
+                    <small><label for="remember-me" class="light-text">Remember Me</label></small>
+                    <a href="" class="forget-password light-text"><small>Forgot Password?</small></a>
                 </div>
                 <div class="form-control buttons-div">
                     <a href=""><button class="button login" id="log-in">Login</button></a>
