--- a/user_team_member/memberpage.html
+++ b/user_team_member/memberpage.html
@@ -12,127 +12,25 @@
 
 <body>
     <div class="container-fluid" id="main-content">
-        <div class="container">
+        <div class="container pt-4">
             <div class="row mb-3 justify-content-center">
-                <div class="col-lg-10 d-flex">
-                    <h4 class="text-white">Team Members</h4>
+                <div class="col-10 d-flex">
+                    <h5 class="text-white align-self-center">Team Members</h5>
                     <button class="btn btn-primary bg-warning ml-auto">+ Invite a new user</button>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-10">
+                <div class="col-10">
                     <table class="table table-borderless">
                         <tbody id="tmembers">
-
+                        
                         </tbody>
                     </table>
-                    
+
                 </div>
             </div>
-
         </div>
-        <!-- <div class="container border border-danger">
-            <div class="row mb-3 border border-dark justify-content-center">
-                <div class="col-lg-10 btn-warning d-flex">
-                    <h5>Team Members</h5>
-                    <button class="btn btn-primary ml-auto">+ Invite a new user</button>
-                </div>
-            </div>
-            <div class="row my-3 justify-content-center">
-                <div class="col-lg-10 bg-warning py-3 d-flex">
-                    <div class="avatar col d-flex">
-                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle" alt="developer-img">
-                        <h5 class="col align-self-center name">Name</h5>
-                    </div>
 
-                    <h5 class="col align-self-center">Email</h5>
-                    <h5 class="col align-self-center">Developer</h5>
-                    <div class="button col align-self-center col-auto">
-                        <button class="btn btn-success">Activated</button>
-                    </div>
-                    <div class="icon col align-self-center d-flex justify-content-end">
-                        <img src="./images/icons8-settings-16.png" alt="settings">
-                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand">
-                        </div>
-                    </div>
-                </div> 
-            </div> -->
-        <!-- <div class="row my-3 justify-content-center">
-                <div class="col-lg-10 bg-warning py-3 d-flex">
-                    <div class="avatar col d-flex">
-                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
-                            alt="developer-img">
-                        <h5 class="col align-self-center name">Name</h5>
-                    </div>
-
-                    <h5 class="col align-self-center">Email</h5>
-                    <h5 class="col align-self-center">Developer</h5>
-                    <div class="button col align-self-center col-auto">
-                        <button class="btn btn-success">Activated</button>
-                    </div>
-                    <div class="icon col align-self-center d-flex justify-content-end">
-                        <img src="./images/icons8-settings-16.png" alt="settings">
-                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand" ></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row my-3 justify-content-center">
-                <div class="col-lg-10 bg-warning py-3 d-flex">
-                    <div class="avatar col d-flex">
-                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
-                            alt="developer-img">
-                        <h5 class="col align-self-center name">Name</h5>
-                    </div>
-
-                    <h5 class="col align-self-center">Email</h5>
-                    <h5 class="col align-self-center">Developer</h5>
-                    <div class="button col align-self-center col-auto">
-                        <button class="btn btn-success">Activated</button>
-                    </div>
-                    <div class="icon col align-self-center d-flex justify-content-end">
-                        <img src="./images/icons8-settings-16.png" alt="settings">
-                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand" ></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row my-3 justify-content-center">
-                <div class="col-lg-10 bg-warning py-3 d-flex">
-                    <div class="avatar col d-flex">
-                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
-                            alt="developer-img">
-                        <h5 class="col align-self-center name">Name</h5>
-                    </div>
-
-                    <h5 class="col align-self-center">Email</h5>
-                    <h5 class="col align-self-center">Developer</h5>
-                    <div class="button col align-self-center col-auto">
-                        <button class="btn btn-success">Activated</button>
-                    </div>
-                    <div class="icon col align-self-center d-flex justify-content-end">
-                        <img src="./images/icons8-settings-16.png" alt="settings">
-                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand" ></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row my-3 justify-content-center">
-                <div class="col-lg-10 bg-warning py-3 d-flex">
-                    <div class="avatar col d-flex">
-                        <img src="./images/sanfran.jpg" class="developer-img rounded-circle"
-                            alt="developer-img">
-                        <h5 class="col align-self-center name">Name</h5>
-                    </div>
-
-                    <h5 class="col align-self-center">Email</h5>
-                    <h5 class="col align-self-center">Developer</h5>
-                    <div class="button col align-self-center col-auto">
-                        <button class="btn btn-success">Activated</button>
-                    </div>
-                    <div class="icon col align-self-center d-flex justify-content-end">
-                        <img src="./images/icons8-settings-16.png" alt="settings">
-                        <div class="drop-down align-self-end"> <img src="./images/icons8-sort-down-16.png" alt="expand" ></div>
-                    </div>
-                </div>
-            </div> -->
 
     </div>
 
