--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <span class="light-text">Welcome back, please login to your account</span>
                 <small class="error-msg"></small>
                 <div class="form-control">
-                    <input type="text" class="form-input email" placeholder="Email Address" autocomplete="on">
+                    <input type="text" class="form-input email change" placeholder="Email Address" autocomplete="on">
                 </div>
                 <div class="form-control">
-                    <input type="password" class="form-input password" placeholder="Password">
+                    <input type="password" class="form-input password change" placeholder="Password">
                 </div>
                 <div class="form-control">
                     <input type="checkbox" id="remember-me">
