fixed input color

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
                 <span class="light-text">Welcome back, please login to your account</span>
                 <small class="error-msg"></small>
                 <div class="form-control">
-                    <input type="text" class="form-input email change" placeholder="Email Address" autocomplete="on">
+                    <input type="text" class="form-input email change"
+                        value="creative.ui89@gmail.com" required>
+                        <span class="email-password-place">Email address</span>
                 </div>
                 <div class="form-control">
-                    <input type="password" class="form-input password change" placeholder="Password">
+                    <input type="password" class="form-input password change" value="Passwordpass" required>
+                    <span class="email-password-place">Password</span>
                 </div>
                 <div class="form-control">
                     <input type="checkbox" id="remember-me">
@@ -51,7 +54,7 @@
        
 
     </main>
-
+<!-- jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- main script -->
