--- a/user_team_member/memberpage.html
+++ b/user_team_member/memberpage.html
@@ -31,10 +31,13 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
+    <div class="preloader-wrapper">
+        <div class="preloader">
+            <img src="./images/5.gif" alt="dotted-circle">
+        </div>
+    </div>
 
 
     <!-- bootstrap jquery CDN -->
