--- a/Web_Development/Cyhermes_Training/Week_1/Mockup/index.html
+++ b/Web_Development/Cyhermes_Training/Week_1/Mockup/index.html
@@ -48,7 +48,7 @@
 
         <section class="image-section flex-item">
             <figure class="image-figure">
-                <img src="./images/vectorimage.jpg" alt="iIdea-generation" class="image">
+                <img src="./images/vectorimage.jpg" alt="idea-generation" class="image">
             </figure>
         </section>
        
